# FF-trade

./: .env  .gitignore  app.py  check_completeness.py  creds.txt  pyproject.toml
api/: __init__.py  ibkr_worker.py  models.py  routes_analytics.py  routes_monitor.py  routes_scanner.py  routes_trading.py
cache/: bt_vix.pkl  risk_02f195722132.pkl  risk_53ca433afee9.pkl  risk_698e366393d7.pkl  risk_78b2fd7089e7.pkl  risk_7be6cdb9b328.pkl  risk_b4307a9efdd7.pkl  risk_b7bf05db9003.pkl  risk_cfca8bf2eb7e.pkl  risk_f53cf14acd74.pkl  risk_f6af75bee37f.pkl  skew_analytics.pkl  straddle_analytics.pkl  straddle_history.pkl
core/: __init__.py  autopilot.py  backtest.py  config.py  download.py  download_v3.py  execution.py  fill_db.py  gateway.py  portfolio.py  pricing.py  risk.py  scanner.py  straddle.py  tca.py  theta_ws.py  track_record.py  trader.py
output/: backtest_daily.csv  backtest_results.pkl  backtest_trades.csv  signals_20260308.csv  signals_20260309.csv  signals_20260310.csv  signals_20260428.csv  signals_20260511.csv  signals_20260512.csv  signals_20260513.csv  signals_20260514.csv  top20_20260308.csv  top20_20260309.csv  top20_20260424.csv  top20_20260425.csv  top20_20260427.csv  top20_20260428.csv  top20_20260511.csv  top20_20260512.csv  top20_20260513.csv  top20_20260514.csv
research/: analysis.py  bt_diagnostics.py  bt_regime.py  investigate_drops.py  investigate_returns.py  pdf_style_bt.py  returns.py  skew.py  spreads.py
state/: autopilot.log.2026-04-25  autopilot.log.2026-04-27  autopilot.log.2026-04-28  autopilot.log.2026-04-29  autopilot.log.2026-04-30  (+36 more)
(+32 files in other folders)
